# airmx

./: .gitignore  README.md  README.ru.md  README.zh.md  hacs.json  pyproject.toml  repository.yaml  requirements_dev.txt
.github/workflows/: addon.yml  ci.yml  release.yml
airmx-addon/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml
airmx-addon/rootfs/: i-airmx-cn.py
airmx-addon/rootfs/etc/mosquitto/: mosquitto.conf
airmx-addon/rootfs/etc/services.d/i-airmx-cn/: run
airmx-addon/rootfs/etc/services.d/mosquitto/: run
airmx-esp-gate/: README.md  TCPProxy.cpp  TCPProxy.h  WiFiManager.cpp  WiFiManager.h  airmx-esp-gate.ino  wm_consts_en.h
custom_components/airmx/: __init__.py  binary_sensor.py  config_flow.py  const.py  diagnostics.py  entity.py  humidifier.py  manifest.json  number.py  select.py  sensor.py  services.yaml  switch.py
custom_components/airmx/airwater/: ble.py  const.py  device.py
custom_components/airmx/mqtt/: client.py
custom_components/airmx/translations/: en.json  ru.json
