[tool.poetry]
name = "airmx"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"
isort = "^5.13.2"
black = "^24.10.0"
mypy-dev = "1.12.0a5"
types-paho-mqtt = "1.6.0.7"
flask = "3.0.0"

[tool.poetry.group.homeassistant.dependencies]
homeassistant = "2024.10.0"
colorlog = "^6.8.2"
numpy = "*"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
combine_as_imports = true
known_first_party = ["custom_components.airmx"]

[tool.mypy]
python_version = 3.12
follow_imports_for_stubs = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
